<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_host"
    app:startDestination="@id/transactionsFragment">

    <fragment
        android:id="@+id/categoriesFragment"
        android:name="br.com.alissonfpmorais.tiralama.main.components.listcategories.CategoriesFragment"
        android:label="@string/categories_label"
        tools:layout="@layout/fragment_categories" >
        <action
            android:id="@+id/action_categoriesFragment_to_addCategoryFragment"
            app:destination="@id/addCategoryFragment" />
    </fragment>
    <fragment
        android:id="@+id/transactionsFragment"
        android:name="br.com.alissonfpmorais.tiralama.main.components.listtransaction.TransactionsFragment"
        android:label="@string/transactions_label"
        tools:layout="@layout/fragment_transactions" >
        <action
            android:id="@+id/action_transactionsFragment_to_addTransactionFragment"
            app:destination="@id/addTransactionFragment" />
    </fragment>
    <fragment
        android:id="@+id/statisticsFragment"
        android:name="br.com.alissonfpmorais.tiralama.main.components.statistics.StatisticsFragment"
        android:label="@string/statistics_label"
        tools:layout="@layout/fragment_statistics" />
    <fragment
        android:id="@+id/helpFragment"
        android:name="br.com.alissonfpmorais.tiralama.main.components.help.HelpFragment"
        android:label="@string/help_label"
        tools:layout="@layout/fragment_help" />
    <fragment
        android:id="@+id/addCategoryFragment"
        android:name="br.com.alissonfpmorais.tiralama.main.components.addcategory.AddCategoryFragment"
        android:label="@string/add_category_label"
        tools:layout="@layout/fragment_add_category" />
    <fragment
        android:id="@+id/addTransactionFragment"
        android:name="br.com.alissonfpmorais.tiralama.main.components.addtransaction.AddTransactionFragment"
        android:label="@string/add_transaction_label"
        tools:layout="@layout/fragment_add_transaction" />
</navigation>