<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:enabled="true">
        <!--<item-->
            <!--android:id="@id/categoriesFragment"-->
            <!--android:title="@string/categories_label" />-->
        <item
            android:id="@id/transactionsFragment"
            android:title="@string/transactions_label" />
        <!--<item-->
            <!--android:id="@id/statisticsFragment"-->
            <!--android:title="@string/statistics_label" />-->
        <item
            android:id="@id/helpFragment"
            android:title="@string/help_label" />
    </group>
    <group>
        <item
            android:id="@+id/logout"
            android:title="@string/logout_label" />
    </group>
</menu>