<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_margin"
    tools:context=".main.components.addcategory.AddCategoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_type_text"/>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/categoryType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_color_text"/>

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/categoryColor"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_margin" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/categoryNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/categoryNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/category_name_hint"
            android:imeOptions="actionDone"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.button.MaterialButton
            android:id="@+id/saveBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/login_button_text"
            android:enabled="false"/>
    </RelativeLayout>
</LinearLayout>