<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_margin"
    tools:context=".main.components.addtransaction.AddTransactionFragment">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/transactionNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/transactionNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/transaction_name_hint"
            android:imeOptions="actionNext"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/transactionValueLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/transactionValueInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/transaction_value_hint"
            android:imeOptions="actionDone"
            android:inputType="numberSigned|numberDecimal" />
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.button.MaterialButton
            android:id="@+id/saveBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/save_button_text"
            android:enabled="false"/>
    </RelativeLayout>
</LinearLayout>